[ROBOT] Action all

--- a/core/i18n/es_ES.json
+++ b/core/i18n/es_ES.json
@@ -1,37 +1,37 @@
 {
     "plugins\/gsh\/plugin_info\/configuration.php": {
-        "Serveur Google smarthome": "Serveur Google smarthome",
+        "Serveur Google smarthome": "Servidor smarthome de Google",
         "Mode": "Modo",
-        "Service Jeedom Cloud": "Service Jeedom Cloud",
-        "Service Interne": "Service Interne",
-        "Envoyer configuration au market": "Envoyer configuration au market",
+        "Service Jeedom Cloud": "Servicio Jeedom Cloud",
+        "Service Interne": "Servicio interno",
+        "Envoyer configuration au market": "Enviar configuración al market",
         "Envoyer": "Enviar",
-        "DNS ou IP du serveur": "DNS ou IP du serveur",
-        "Configuration général": "Configuration général",
-        "ID du projet Dialogflow": "ID du projet Dialogflow",
+        "DNS ou IP du serveur": "DNS o IP del servidor",
+        "Configuration général": "Configuración general",
+        "ID du projet Dialogflow": "ID del proyecto Dialogflow",
         "Connection": "Conexión",
-        "ID du projet Smarthome": "ID du projet Smarthome",
-        "Clef maitre": "Clef maitre",
-        "Clef API Google": "Clef API Google",
+        "ID du projet Smarthome": "ID del proyecto Smarthome",
+        "Clef maitre": "Clave maestra",
+        "Clef API Google": "Clave de API de Google",
         "Cient ID": "Cient ID",
         "Cient Secret": "Cient Secret",
-        "Clef API Interaction": "Clef API Interaction",
-        "Chaine de sécurisation URL": "Chaine de sécurisation URL",
+        "Clef API Interaction": "Clave API interacción",
+        "Chaine de sécurisation URL": "Cadena de seguridad URL",
         "Port": "Puerto",
         "Timeout": "Timeout",
         "URL": "URL",
         "Configuration": "Configuración",
         "Voir": "Ver",
         "Utilisateur": "Usuario",
-        "ID utilisateur": "ID utilisateur",
+        "ID utilisateur": "ID Usuario",
         "Nom d'utilisateur": "Nombre de usuario",
         "Mot de passe": "Contraseña",
         "Token": "Token",
-        "Mode d'accès Jeedom": "Mode d'accès Jeedom",
+        "Mode d'accès Jeedom": "Modo de acceso a Jeedom",
         "Interne": "Interno",
         "Externe": "Externa",
-        "Configuration utilisateur": "Configuration utilisateur",
-        "Configuration envoyée avec succès": "Configuration envoyée avec succès",
+        "Configuration utilisateur": "Configuración de usuarios",
+        "Configuration envoyée avec succès": "Configuración enviada correctamente",
         "Homegraph API Google": "Homegraph API Google",
         "Homegraph User Agent": "Homegraph User Agent",
         "Fulfillment URL : ": "Fulfillment URL : ",
@@ -41,15 +41,15 @@
         "Oauth": "Oauth",
         "Smarthome": "Smarthome",
         "Interaction": "Interacción",
-        "[Optionnel] Clef authentification header (authkey)": "[Optionnel] Clef authentification header (authkey)",
-        "Clef d'accès sécurisé": "Clef d'accès sécurisé",
-        "Clef authentification header (authkey)": "Clef authentification header (authkey)",
+        "[Optionnel] Clef authentification header (authkey)": "[Opcional] Clave authentification header (authkey)",
+        "Clef d'accès sécurisé": "Clave de acceso seguro",
+        "Clef authentification header (authkey)": "Clave authentification header (authkey)",
         "Cloud": "Cloud",
         "Standalone": "Standalone"
     },
     "plugins\/gsh\/desktop\/php\/gsh.php": {
         "Sauvegarder": "Guardar",
-        "Voir la configuration": "Voir la configuration",
+        "Voir la configuration": "Ver la configuración",
         "Equipement": "Dispositivos",
         "Scénario": "Escenario",
         "Plugin": "Plugin",
@@ -61,26 +61,26 @@
         "Aucun": "Ninguno",
         "Lumière": "Iluminación",
         "Thermostat": "Termostato",
-        "Info Binaire\/Actionneur on\/off": "Info Binaire\/Actionneur on\/off",
+        "Info Binaire\/Actionneur on\/off": "Información binaria/actuador activado/desactivado",
         "Caméra": "Cámara",
-        "Ajouter scène": "Ajouter scène",
+        "Ajouter scène": "Añadir escena",
         "Volet": "Persiana"
     },
     "plugins\/gsh\/desktop\/js\/gsh.js": {
         "Configuration de l'équipement": "Configuración del dispositivo",
         "Synchronisation réussie": "Sincronizado con éxito",
-        "Vous avez": "Vous avez",
-        "équipement(s) OK et": "équipement(s) OK et",
-        "avec une configuration invalide": "avec une configuration invalide",
-        "Configuration péripheriques": "Configuration péripheriques",
-        "Nom de la scene ?": "Nom de la scene ?",
+        "Vous avez": "Usted tiene",
+        "équipement(s) OK et": "dispositivo(s) OK y",
+        "avec une configuration invalide": "una configuración no válida",
+        "Configuration péripheriques": "Configuración de periféricos",
+        "Nom de la scene ?": "¿Nombre de la escena?",
         "Nouveau nom ?": "¿ Nuevo nombre ?",
-        "Action d\\'entrée": "Action d\\'entrée",
+        "Action d\\'entrée": "Acción de entrada",
         "Action de sortie": "Acción de salida",
-        "Décocher pour desactiver l\\'action": "Décocher pour desactiver l\\'action",
-        "Cocher pour que la commande s\\'éxecute en parrallele des autres actions": "Cocher pour que la commande s\\'éxecute en parrallele des autres actions",
+        "Décocher pour desactiver l\\'action": "Desactive la casilla para desactivar la acción",
+        "Cocher pour que la commande s\\'éxecute en parrallele des autres actions": "Compruebe que el comando se ejecuta en paralelo con las otras acciones",
         "Sélectionner un mot-clé": "Seleccionar una palabra clave",
-        "Nom du scene": "Nom du scene",
+        "Nom du scene": "Nombre de la escena",
         "Supprimer": "Borrar"
     },
     "plugins\/gsh\/core\/class\/gsh_thermostat.class.php": {
