[ROBOT] Action all

--- a/core/i18n/en_US.json
+++ b/core/i18n/en_US.json
@@ -1,38 +1,38 @@
 {
     "plugins\/gsh\/plugin_info\/configuration.php": {
-        "Serveur Google smarthome": "Serveur Google smarthome",
+        "Serveur Google smarthome": "Google smarthome server",
         "Mode": "Mode",
-        "Service Jeedom Cloud": "Service Jeedom Cloud",
-        "Service Interne": "Service Interne",
-        "Envoyer configuration au market": "Envoyer configuration au market",
+        "Service Jeedom Cloud": "Jeedom Cloud Service",
+        "Service Interne": "Internal Service",
+        "Envoyer configuration au market": "Send configuration to the market",
         "Envoyer": "Send",
-        "DNS ou IP du serveur": "DNS ou IP du serveur",
-        "Configuration général": "Configuration général",
-        "ID du projet Dialogflow": "ID du projet Dialogflow",
+        "DNS ou IP du serveur": "DNS or IP of the server",
+        "Configuration général": "General configuration",
+        "ID du projet Dialogflow": "Dialogflow project ID",
         "Connection": "Log In",
-        "ID du projet Smarthome": "ID du projet Smarthome",
-        "Clef maitre": "Clef maitre",
-        "Clef API Google": "Clef API Google",
-        "Cient ID": "Cient ID",
-        "Cient Secret": "Cient Secret",
-        "Clef API Interaction": "Clef API Interaction",
-        "Chaine de sécurisation URL": "Chaine de sécurisation URL",
+        "ID du projet Smarthome": "Smarthome project ID",
+        "Clef maitre": "Master key",
+        "Clef API Google": "Google API Key",
+        "Cient ID": "Client ID",
+        "Cient Secret": "Client Secret",
+        "Clef API Interaction": "Interaction API key",
+        "Chaine de sécurisation URL": "URL security chain",
         "Port": "Port",
         "Timeout": "Timeout",
         "URL": "URL",
         "Configuration": "Configuration",
         "Voir": "View",
         "Utilisateur": "User",
-        "ID utilisateur": "ID utilisateur",
+        "ID utilisateur": "User ID",
         "Nom d'utilisateur": "Username",
         "Mot de passe": "Password",
         "Token": "Token",
-        "Mode d'accès Jeedom": "Mode d'accès Jeedom",
+        "Mode d'accès Jeedom": "Jeedom access mode",
         "Interne": "Internal",
         "Externe": "External",
-        "Configuration utilisateur": "Configuration utilisateur",
-        "Configuration envoyée avec succès": "Configuration envoyée avec succès",
-        "Homegraph API Google": "Homegraph API Google",
+        "Configuration utilisateur": "User configuration",
+        "Configuration envoyée avec succès": "Configuration sent successfully",
+        "Homegraph API Google": "Homegraph Google API",
         "Homegraph User Agent": "Homegraph User Agent",
         "Fulfillment URL : ": "Fulfillment URL : ",
         "Authorization URL : ": "Authorization URL : ",
@@ -41,15 +41,15 @@
         "Oauth": "Oauth",
         "Smarthome": "Smarthome",
         "Interaction": "Interaction",
-        "[Optionnel] Clef authentification header (authkey)": "[Optionnel] Clef authentification header (authkey)",
-        "Clef d'accès sécurisé": "Clef d'accès sécurisé",
-        "Clef authentification header (authkey)": "Clef authentification header (authkey)",
+        "[Optionnel] Clef authentification header (authkey)": "[Optional] Authentication key header (authkey)",
+        "Clef d'accès sécurisé": "Secure access key",
+        "Clef authentification header (authkey)": "Authentication key header (authkey)",
         "Cloud": "Cloud",
         "Standalone": "Standalone"
     },
     "plugins\/gsh\/desktop\/php\/gsh.php": {
         "Sauvegarder": "Save",
-        "Voir la configuration": "Voir la configuration",
+        "Voir la configuration": "View configuration",
         "Equipement": "Device",
         "Scénario": "Scenario",
         "Plugin": "Plugin",
@@ -61,26 +61,26 @@
         "Aucun": "None",
         "Lumière": "Light",
         "Thermostat": "Thermostat",
-        "Info Binaire\/Actionneur on\/off": "Info Binaire\/Actionneur on\/off",
+        "Info Binaire\/Actionneur on\/off": "Binary info/Trigger on/off",
         "Caméra": "Camera",
-        "Ajouter scène": "Ajouter scène",
+        "Ajouter scène": "Add scene",
         "Volet": "Shutter"
     },
     "plugins\/gsh\/desktop\/js\/gsh.js": {
         "Configuration de l'équipement": "Device configuration",
         "Synchronisation réussie": "Synchronisation successful",
-        "Vous avez": "Vous avez",
-        "équipement(s) OK et": "équipement(s) OK et",
-        "avec une configuration invalide": "avec une configuration invalide",
-        "Configuration péripheriques": "Configuration péripheriques",
-        "Nom de la scene ?": "Nom de la scene ?",
+        "Vous avez": "You have",
+        "équipement(s) OK et": "device(s) OK and",
+        "avec une configuration invalide": "with an invalid configuration",
+        "Configuration péripheriques": "Devices configuration",
+        "Nom de la scene ?": "Scene name?",
         "Nouveau nom ?": "New name?",
-        "Action d\\'entrée": "Action d\\'entrée",
+        "Action d\\'entrée": "Input action",
         "Action de sortie": "Output action",
-        "Décocher pour desactiver l\\'action": "Décocher pour desactiver l\\'action",
-        "Cocher pour que la commande s\\'éxecute en parrallele des autres actions": "Cocher pour que la commande s\\'éxecute en parrallele des autres actions",
+        "Décocher pour desactiver l\\'action": "Uncheck to disable the action",
+        "Cocher pour que la commande s\\'éxecute en parrallele des autres actions": "Check for the command to run in parallel with the other actions",
         "Sélectionner un mot-clé": "Select a keyword",
-        "Nom du scene": "Nom du scene",
+        "Nom du scene": "Scene name",
         "Supprimer": "Delete"
     },
     "plugins\/gsh\/core\/class\/gsh_thermostat.class.php": {
