[ROBOT] Action all

--- a/core/i18n/de_DE.json
+++ b/core/i18n/de_DE.json
@@ -4,7 +4,7 @@
         "Mode": "Modus",
         "Service Jeedom Cloud": "Service Jeedom Cloud",
         "Service Interne": "Service Interne",
-        "Envoyer configuration au market": "Envoyer configuration au market",
+        "Envoyer configuration au market": "Konfiguration an den Markt senden",
         "Envoyer": "senden",
         "DNS ou IP du serveur": "DNS ou IP du serveur",
         "Configuration général": "Allgemeine Konfiguration",
@@ -30,8 +30,8 @@
         "Mode d'accès Jeedom": "Mode d'accès Jeedom",
         "Interne": "intern",
         "Externe": "extern",
-        "Configuration utilisateur": "Configuration utilisateur",
-        "Configuration envoyée avec succès": "Configuration envoyée avec succès",
+        "Configuration utilisateur": "Benutzerkonfiguration",
+        "Configuration envoyée avec succès": "Konfiguration erfolgreich gesendet",
         "Homegraph API Google": "Homegraph API Google",
         "Homegraph User Agent": "Homegraph User Agent",
         "Fulfillment URL : ": "Fulfillment URL : ",
@@ -49,7 +49,7 @@
     },
     "plugins\/gsh\/desktop\/php\/gsh.php": {
         "Sauvegarder": "Speichern",
-        "Voir la configuration": "Voir la configuration",
+        "Voir la configuration": " Siehe die Konfiguration",
         "Equipement": "Gerät",
         "Scénario": "Szenario",
         "Plugin": "Plugin",
@@ -71,8 +71,8 @@
         "Synchronisation réussie": "erfolgreiche Synchronisation",
         "Vous avez": "Vous avez",
         "équipement(s) OK et": "équipement(s) OK et",
-        "avec une configuration invalide": "avec une configuration invalide",
-        "Configuration péripheriques": "Configuration péripheriques",
+        "avec une configuration invalide": "mit einer ungültigen Konfiguration",
+        "Configuration péripheriques": "Device Konfiguration",
         "Nom de la scene ?": "Nom de la scene ?",
         "Nouveau nom ?": "Neuer Name",
         "Action d\\'entrée": "Action d\\'entrée",
