[ROBOT] Action all

--- a/core/i18n/es_ES.json
+++ b/core/i18n/es_ES.json
@@ -2,76 +2,81 @@
     "plugins\/gsh\/plugin_info\/configuration.php": {
         "Serveur Google smarthome": "Servidor smarthome de Google",
         "Mode": "Modo",
-        "Service Jeedom Cloud": "Servicio Jeedom Cloud",
-        "Service Interne": "Servicio interno",
+        "Cloud": "Cloud",
+        "Standalone": "Standalone",
         "Envoyer configuration au market": "Enviar configuración al market",
         "Envoyer": "Enviar",
-        "DNS ou IP du serveur": "DNS o IP del servidor",
-        "Configuration général": "Configuración general",
-        "ID du projet Dialogflow": "ID del proyecto Dialogflow",
-        "Connection": "Conexión",
-        "ID du projet Smarthome": "ID del proyecto Smarthome",
-        "Clef maitre": "Clave maestra",
-        "Clef API Google": "Clave de API de Google",
+        "Information": "Información",
+        "Oauth": "Oauth",
         "Cient ID": "Cient ID",
         "Cient Secret": "Cient Secret",
-        "Clef API Interaction": "Clave API interacción",
-        "Chaine de sécurisation URL": "Cadena de seguridad URL",
-        "Port": "Puerto",
-        "Timeout": "Timeout",
-        "URL": "URL",
-        "Configuration": "Configuración",
-        "Voir": "Ver",
-        "Utilisateur": "Usuario",
-        "ID utilisateur": "ID Usuario",
-        "Nom d'utilisateur": "Nombre de usuario",
-        "Mot de passe": "Contraseña",
-        "Token": "Token",
-        "Mode d'accès Jeedom": "Modo de acceso a Jeedom",
-        "Interne": "Interno",
-        "Externe": "Externa",
-        "Configuration utilisateur": "Configuración de usuarios",
-        "Configuration envoyée avec succès": "Configuración enviada correctamente",
-        "Homegraph API Google": "Homegraph API Google",
-        "Homegraph User Agent": "Homegraph User Agent",
+        "Smarthome": "Smarthome",
         "Fulfillment URL : ": "Fulfillment URL : ",
         "Authorization URL : ": "Authorization URL : ",
         "Token URL : ": "Token URL : ",
-        "Information": "Información",
-        "Oauth": "Oauth",
-        "Smarthome": "Smarthome",
-        "Interaction": "Interacción",
-        "[Optionnel] Clef authentification header (authkey)": "[Opcional] Clave authentification header (authkey)",
+        "ID du projet Smarthome": "ID del proyecto Smarthome",
+        "Connection": "Conexión",
+        "Homegraph API Google": "Homegraph API Google",
+        "Homegraph User Agent": "Homegraph User Agent",
         "Clef d'accès sécurisé": "Clave de acceso seguro",
+        "Mail client (JWT)": "Mail client (JWT)",
+        "Clef privé (JWT)": "Clef privé (JWT)",
+        "Interaction": "Interacción",
+        "ID du projet Dialogflow": "ID del proyecto Dialogflow",
         "Clef authentification header (authkey)": "Clave authentification header (authkey)",
-        "Cloud": "Cloud",
-        "Standalone": "Standalone"
+        "Configuration envoyée avec succès": "Configuración enviada correctamente",
+        "Votre abonnement aux services assistant vocaux est illimité": "Votre abonnement aux services assistant vocaux est illimité",
+        "Abonnement service assistant vocaux": "Abonnement service assistant vocaux",
+        "Pour le prolonger ou vous réabonner, allez": "Pour le prolonger ou vous réabonner, allez",
+        "ici": "ici",
+        "Votre abonnement aux services assistant vocaux est illimité.": "Votre abonnement aux services assistant vocaux est illimité.",
+        "puis onglet Mes Service": "puis onglet Mes Service",
+        "Votre abonnement aux services assistant vocaux est fini.": "Votre abonnement aux services assistant vocaux est fini.",
+        "Pour vous réabonner, allez": "Pour vous réabonner, allez",
+        "Votre abonnement aux services assistant vocaux fini le ": "Votre abonnement aux services assistant vocaux fini le ",
+        "Pour le prolonger, allez": "Pour le prolonger, allez",
+        "Autoriser la communication local": "Autoriser la communication local"
     },
     "plugins\/gsh\/desktop\/php\/gsh.php": {
-        "Sauvegarder": "Guardar",
         "Voir la configuration": "Ver la configuración",
+        "Sauvegarder": "Guardar",
         "Equipement": "Dispositivos",
         "Scénario": "Escenario",
         "Plugin": "Plugin",
-        "Transmettre": "Transmitir",
-        "Paramétrage": "Parametraje",
+        "Options": "Options",
+        "Status": "Status",
         "Type": "Tipo",
         "Pseudo": "Apodo",
         "Action": "Acción",
+        "Transmettre": "Transmitir",
+        "Aucune": "Aucune",
+        "Code": "Code",
+        "Remonter l'état": "Remonter l'état",
+        "Code pin": "Code pin",
         "Aucun": "Ninguno",
         "Lumière": "Iluminación",
         "Thermostat": "Termostato",
-        "Info Binaire\/Actionneur on\/off": "Información binaria/actuador activado/desactivado",
+        "Prise": "Prise",
         "Caméra": "Cámara",
+        "Store": "Store",
+        "Volet": "Persiana",
+        "Capteur": "Capteur",
+        "Fenêtre": "Fenêtre",
+        "Porte": "Porte",
+        "Alarme": "Alarme",
+        "Verrou": "Verrou",
+        "TV": "TV",
+        "Enceinte": "Enceinte",
         "Ajouter scène": "Añadir escena",
-        "Volet": "Persiana"
+        "Porte Garage": "Porte Garage",
+        "Rideaux": "Rideaux",
+        "Vanne": "Vanne",
+        "Ventilateur": "Ventilateur"
     },
     "plugins\/gsh\/desktop\/js\/gsh.js": {
         "Configuration de l'équipement": "Configuración del dispositivo",
+        "Configuration avancée": "Configuration avancée",
         "Synchronisation réussie": "Sincronizado con éxito",
-        "Vous avez": "Usted tiene",
-        "équipement(s) OK et": "dispositivo(s) OK y",
-        "avec une configuration invalide": "una configuración no válida",
         "Configuration péripheriques": "Configuración de periféricos",
         "Nom de la scene ?": "¿Nombre de la escena?",
         "Nouveau nom ?": "¿ Nuevo nombre ?",
@@ -81,10 +86,34 @@
         "Cocher pour que la commande s\\'éxecute en parrallele des autres actions": "Compruebe que el comando se ejecuta en paralelo con las otras acciones",
         "Sélectionner un mot-clé": "Seleccionar una palabra clave",
         "Nom du scene": "Nombre de la escena",
-        "Supprimer": "Borrar"
+        "Supprimer": "Borrar",
+        "Pseudo": "Pseudo",
+        "Pièce": "Pièce",
+        "Synchronisation réussie. Pour voir le status des equipements à jour, merci de rafraichir la page (F5)": "Synchronisation réussie. Pour voir le status des equipements à jour, merci de rafraichir la page (F5)",
+        "Information type générique": "Information type générique"
     },
-    "plugins\/gsh\/core\/class\/gsh_thermostat.class.php": {
-        "Chauffage": "Calefacción",
-        "Climatisation": "Climatización"
+    "plugins\/gsh\/desktop\/modal\/advanceConfig.php": {
+        "Sauvegarder": "Sauvegarder",
+        "Configuration du volet": "Configuration du volet",
+        "Inverser": "Inverser",
+        "Sauvegarde réussi, pensez à relancer une synchronisation": "Sauvegarde réussi, pensez à relancer une synchronisation",
+        "Aucun type configuré pour ce périphérique": "Aucun type configuré pour ce périphérique",
+        "Il n'y a aucune configuration avancée pour ce type": "Il n'y a aucune configuration avancée pour ce type",
+        "Groupe objet (option nécéssitant un compte market spécifique)": "Groupe objet (option nécéssitant un compte market spécifique)"
+    },
+    "plugins\/gsh\/desktop\/modal\/showNeedGenericType.php": {
+        "Eqlogic ID non valide : ": "Eqlogic ID non valide : ",
+        "Voici les générique type qui sont utilisation avec votre type d'équipement. Attention il ne faut pas forcement tous les avoir sur l'équipement (ou n'en avoir aucun)": "Voici les générique type qui sont utilisation avec votre type d'équipement. Attention il ne faut pas forcement tous les avoir sur l'équipement (ou n'en avoir aucun)",
+        "Aucune information disponible": "Aucune information disponible"
+    },
+    "plugins\/gsh\/core\/class\/gsh_light.class.php": {
+        "Position": "Position",
+        "On": "On",
+        "Off": "Off",
+        "Etat": "Etat",
+        "Luminosité": "Luminosité",
+        "Etat luminosité": "Etat luminosité",
+        "Couleur": "Couleur",
+        "Etat couleur": "Etat couleur"
     }
 }
