--- a/core/i18n/en_US.json
+++ b/core/i18n/en_US.json
@@ -2,76 +2,81 @@
     "plugins\/gsh\/plugin_info\/configuration.php": {
         "Serveur Google smarthome": "Google smarthome server",
         "Mode": "Mode",
-        "Service Jeedom Cloud": "Jeedom Cloud Service",
-        "Service Interne": "Internal Service",
+        "Cloud": "Cloud",
+        "Standalone": "Standalone",
         "Envoyer configuration au market": "Send configuration to the market",
         "Envoyer": "Send",
-        "DNS ou IP du serveur": "DNS or IP of the server",
-        "Configuration général": "General configuration",
-        "ID du projet Dialogflow": "Dialogflow project ID",
-        "Connection": "Log In",
-        "ID du projet Smarthome": "Smarthome project ID",
-        "Clef maitre": "Master key",
-        "Clef API Google": "Google API Key",
+        "Information": "Information",
+        "Oauth": "Oauth",
         "Cient ID": "Client ID",
         "Cient Secret": "Client Secret",
-        "Clef API Interaction": "Interaction API key",
-        "Chaine de sécurisation URL": "URL security chain",
-        "Port": "Port",
-        "Timeout": "Timeout",
-        "URL": "URL",
-        "Configuration": "Configuration",
-        "Voir": "View",
-        "Utilisateur": "User",
-        "ID utilisateur": "User ID",
-        "Nom d'utilisateur": "Username",
-        "Mot de passe": "Password",
-        "Token": "Token",
-        "Mode d'accès Jeedom": "Jeedom access mode",
-        "Interne": "Internal",
-        "Externe": "External",
-        "Configuration utilisateur": "User configuration",
-        "Configuration envoyée avec succès": "Configuration sent successfully",
-        "Homegraph API Google": "Homegraph Google API",
-        "Homegraph User Agent": "Homegraph User Agent",
+        "Smarthome": "Smarthome",
         "Fulfillment URL : ": "Fulfillment URL : ",
         "Authorization URL : ": "Authorization URL : ",
         "Token URL : ": "Token URL : ",
-        "Information": "Information",
-        "Oauth": "Oauth",
-        "Smarthome": "Smarthome",
-        "Interaction": "Interaction",
-        "[Optionnel] Clef authentification header (authkey)": "[Optional] Authentication key header (authkey)",
+        "ID du projet Smarthome": "Smarthome project ID",
+        "Connection": "Log In",
+        "Homegraph API Google": "Homegraph Google API",
+        "Homegraph User Agent": "Homegraph User Agent",
         "Clef d'accès sécurisé": "Secure access key",
+        "Mail client (JWT)": "Mail client (JWT)",
+        "Clef privé (JWT)": "Clef privé (JWT)",
+        "Interaction": "Interaction",
+        "ID du projet Dialogflow": "Dialogflow project ID",
         "Clef authentification header (authkey)": "Authentication key header (authkey)",
-        "Cloud": "Cloud",
-        "Standalone": "Standalone"
+        "Configuration envoyée avec succès": "Configuration sent successfully",
+        "Votre abonnement aux services assistant vocaux est illimité": "Votre abonnement aux services assistant vocaux est illimité",
+        "Abonnement service assistant vocaux": "Abonnement service assistant vocaux",
+        "Pour le prolonger ou vous réabonner, allez": "Pour le prolonger ou vous réabonner, allez",
+        "ici": "ici",
+        "Votre abonnement aux services assistant vocaux est illimité.": "Votre abonnement aux services assistant vocaux est illimité.",
+        "puis onglet Mes Service": "puis onglet Mes Service",
+        "Votre abonnement aux services assistant vocaux est fini.": "Votre abonnement aux services assistant vocaux est fini.",
+        "Pour vous réabonner, allez": "Pour vous réabonner, allez",
+        "Votre abonnement aux services assistant vocaux fini le ": "Votre abonnement aux services assistant vocaux fini le ",
+        "Pour le prolonger, allez": "Pour le prolonger, allez",
+        "Autoriser la communication local": "Autoriser la communication local"
     },
     "plugins\/gsh\/desktop\/php\/gsh.php": {
-        "Sauvegarder": "Save",
         "Voir la configuration": "View configuration",
+        "Sauvegarder": "Save",
         "Equipement": "Device",
         "Scénario": "Scenario",
         "Plugin": "Plugin",
-        "Transmettre": "Transmit",
-        "Paramétrage": "Configuration",
+        "Options": "Options",
+        "Status": "Status",
         "Type": "Type",
         "Pseudo": "Alias",
         "Action": "Action",
+        "Transmettre": "Transmit",
+        "Aucune": "Aucune",
+        "Code": "Code",
+        "Remonter l'état": "Remonter l'état",
+        "Code pin": "Code pin",
         "Aucun": "None",
         "Lumière": "Light",
         "Thermostat": "Thermostat",
-        "Info Binaire\/Actionneur on\/off": "Binary info/Trigger on/off",
+        "Prise": "Prise",
         "Caméra": "Camera",
+        "Store": "Store",
+        "Volet": "Shutter",
+        "Capteur": "Capteur",
+        "Fenêtre": "Fenêtre",
+        "Porte": "Porte",
+        "Alarme": "Alarme",
+        "Verrou": "Verrou",
+        "TV": "TV",
+        "Enceinte": "Enceinte",
         "Ajouter scène": "Add scene",
-        "Volet": "Shutter"
+        "Porte Garage": "Porte Garage",
+        "Rideaux": "Rideaux",
+        "Vanne": "Vanne",
+        "Ventilateur": "Ventilateur"
     },
     "plugins\/gsh\/desktop\/js\/gsh.js": {
         "Configuration de l'équipement": "Device configuration",
+        "Configuration avancée": "Configuration avancée",
         "Synchronisation réussie": "Synchronisation successful",
-        "Vous avez": "You have",
-        "équipement(s) OK et": "device(s) OK and",
-        "avec une configuration invalide": "with an invalid configuration",
         "Configuration péripheriques": "Devices configuration",
         "Nom de la scene ?": "Scene name?",
         "Nouveau nom ?": "New name?",
@@ -81,10 +86,34 @@
         "Cocher pour que la commande s\\'éxecute en parrallele des autres actions": "Check for the command to run in parallel with the other actions",
         "Sélectionner un mot-clé": "Select a keyword",
         "Nom du scene": "Scene name",
-        "Supprimer": "Delete"
+        "Supprimer": "Delete",
+        "Pseudo": "Pseudo",
+        "Pièce": "Pièce",
+        "Synchronisation réussie. Pour voir le status des equipements à jour, merci de rafraichir la page (F5)": "Synchronisation réussie. Pour voir le status des equipements à jour, merci de rafraichir la page (F5)",
+        "Information type générique": "Information type générique"
     },
-    "plugins\/gsh\/core\/class\/gsh_thermostat.class.php": {
-        "Chauffage": "Heating",
-        "Climatisation": "Air conditioning"
+    "plugins\/gsh\/desktop\/modal\/advanceConfig.php": {
+        "Sauvegarder": "Sauvegarder",
+        "Configuration du volet": "Configuration du volet",
+        "Inverser": "Inverser",
+        "Sauvegarde réussi, pensez à relancer une synchronisation": "Sauvegarde réussi, pensez à relancer une synchronisation",
+        "Aucun type configuré pour ce périphérique": "Aucun type configuré pour ce périphérique",
+        "Il n'y a aucune configuration avancée pour ce type": "Il n'y a aucune configuration avancée pour ce type",
+        "Groupe objet (option nécéssitant un compte market spécifique)": "Groupe objet (option nécéssitant un compte market spécifique)"
+    },
+    "plugins\/gsh\/desktop\/modal\/showNeedGenericType.php": {
+        "Eqlogic ID non valide : ": "Eqlogic ID non valide : ",
+        "Voici les générique type qui sont utilisation avec votre type d'équipement. Attention il ne faut pas forcement tous les avoir sur l'équipement (ou n'en avoir aucun)": "Voici les générique type qui sont utilisation avec votre type d'équipement. Attention il ne faut pas forcement tous les avoir sur l'équipement (ou n'en avoir aucun)",
+        "Aucune information disponible": "Aucune information disponible"
+    },
+    "plugins\/gsh\/core\/class\/gsh_light.class.php": {
+        "Position": "Position",
+        "On": "On",
+        "Off": "Off",
+        "Etat": "Etat",
+        "Luminosité": "Luminosité",
+        "Etat luminosité": "Etat luminosité",
+        "Couleur": "Couleur",
+        "Etat couleur": "Etat couleur"
     }
 }
