--- a/core/i18n/ja_JP.json
+++ b/core/i18n/ja_JP.json
@@ -2,76 +2,81 @@
     "plugins\/gsh\/plugin_info\/configuration.php": {
         "Serveur Google smarthome": "Serveur Google smarthome",
         "Mode": "モード",
-        "Service Jeedom Cloud": "Service Jeedom Cloud",
-        "Service Interne": "Service Interne",
+        "Cloud": "Cloud",
+        "Standalone": "Standalone",
         "Envoyer configuration au market": "Envoyer configuration au market",
         "Envoyer": "送ります",
-        "DNS ou IP du serveur": "DNS ou IP du serveur",
-        "Configuration général": "Configuration général",
-        "ID du projet Dialogflow": "ID du projet Dialogflow",
-        "Connection": "Connection",
-        "ID du projet Smarthome": "ID du projet Smarthome",
-        "Clef maitre": "Clef maitre",
-        "Clef API Google": "Clef API Google",
+        "Information": "Information",
+        "Oauth": "Oauth",
         "Cient ID": "Cient ID",
         "Cient Secret": "Cient Secret",
-        "Clef API Interaction": "Clef API Interaction",
-        "Chaine de sécurisation URL": "Chaine de sécurisation URL",
-        "Port": "ポート",
-        "Timeout": "Timeout",
-        "URL": "URL",
-        "Configuration": "コンフィギュレーション",
-        "Voir": "ビュー",
-        "Utilisateur": "ユーザー",
-        "ID utilisateur": "ID utilisateur",
-        "Nom d'utilisateur": "ユーザー名",
-        "Mot de passe": "パスワード",
-        "Token": "トークン",
-        "Mode d'accès Jeedom": "Mode d'accès Jeedom",
-        "Interne": "Interne",
-        "Externe": "Externe",
-        "Configuration utilisateur": "Configuration utilisateur",
-        "Configuration envoyée avec succès": "Configuration envoyée avec succès",
-        "Homegraph API Google": "Homegraph API Google",
-        "Homegraph User Agent": "Homegraph User Agent",
+        "Smarthome": "Smarthome",
         "Fulfillment URL : ": "Fulfillment URL : ",
         "Authorization URL : ": "Authorization URL : ",
         "Token URL : ": "Token URL : ",
-        "Information": "Information",
-        "Oauth": "Oauth",
-        "Smarthome": "Smarthome",
-        "Interaction": "Interaction",
-        "[Optionnel] Clef authentification header (authkey)": "[Optionnel] Clef authentification header (authkey)",
+        "ID du projet Smarthome": "ID du projet Smarthome",
+        "Connection": "Connection",
+        "Homegraph API Google": "Homegraph API Google",
+        "Homegraph User Agent": "Homegraph User Agent",
         "Clef d'accès sécurisé": "Clef d'accès sécurisé",
+        "Mail client (JWT)": "Mail client (JWT)",
+        "Clef privé (JWT)": "Clef privé (JWT)",
+        "Interaction": "Interaction",
+        "ID du projet Dialogflow": "ID du projet Dialogflow",
         "Clef authentification header (authkey)": "Clef authentification header (authkey)",
-        "Cloud": "Cloud",
-        "Standalone": "Standalone"
+        "Configuration envoyée avec succès": "Configuration envoyée avec succès",
+        "Votre abonnement aux services assistant vocaux est illimité": "Votre abonnement aux services assistant vocaux est illimité",
+        "Abonnement service assistant vocaux": "Abonnement service assistant vocaux",
+        "Pour le prolonger ou vous réabonner, allez": "Pour le prolonger ou vous réabonner, allez",
+        "ici": "ici",
+        "Votre abonnement aux services assistant vocaux est illimité.": "Votre abonnement aux services assistant vocaux est illimité.",
+        "puis onglet Mes Service": "puis onglet Mes Service",
+        "Votre abonnement aux services assistant vocaux est fini.": "Votre abonnement aux services assistant vocaux est fini.",
+        "Pour vous réabonner, allez": "Pour vous réabonner, allez",
+        "Votre abonnement aux services assistant vocaux fini le ": "Votre abonnement aux services assistant vocaux fini le ",
+        "Pour le prolonger, allez": "Pour le prolonger, allez",
+        "Autoriser la communication local": "Autoriser la communication local"
     },
     "plugins\/gsh\/desktop\/php\/gsh.php": {
-        "Sauvegarder": "セーブ",
         "Voir la configuration": "Voir la configuration",
+        "Sauvegarder": "セーブ",
         "Equipement": "設備",
         "Scénario": "シナリオ",
         "Plugin": "プラグイン",
-        "Transmettre": "Transmettre",
-        "Paramétrage": "Paramétrage",
+        "Options": "Options",
+        "Status": "Status",
         "Type": "タイプ",
         "Pseudo": "ニックネーム",
         "Action": "アクション",
+        "Transmettre": "Transmettre",
+        "Aucune": "Aucune",
+        "Code": "Code",
+        "Remonter l'état": "Remonter l'état",
+        "Code pin": "Code pin",
         "Aucun": "いいえ",
         "Lumière": "ライト",
         "Thermostat": "サーモスタット",
-        "Info Binaire\/Actionneur on\/off": "Info Binaire\/Actionneur on\/off",
+        "Prise": "Prise",
         "Caméra": "カメラ",
+        "Store": "Store",
+        "Volet": "フラップ",
+        "Capteur": "Capteur",
+        "Fenêtre": "Fenêtre",
+        "Porte": "Porte",
+        "Alarme": "Alarme",
+        "Verrou": "Verrou",
+        "TV": "TV",
+        "Enceinte": "Enceinte",
         "Ajouter scène": "Ajouter scène",
-        "Volet": "フラップ"
+        "Porte Garage": "Porte Garage",
+        "Rideaux": "Rideaux",
+        "Vanne": "Vanne",
+        "Ventilateur": "Ventilateur"
     },
     "plugins\/gsh\/desktop\/js\/gsh.js": {
         "Configuration de l'équipement": "機器構成",
+        "Configuration avancée": "Configuration avancée",
         "Synchronisation réussie": "正常な同期",
-        "Vous avez": "Vous avez",
-        "équipement(s) OK et": "équipement(s) OK et",
-        "avec une configuration invalide": "avec une configuration invalide",
         "Configuration péripheriques": "Configuration péripheriques",
         "Nom de la scene ?": "Nom de la scene ?",
         "Nouveau nom ?": "新しい名前は？",
@@ -81,10 +86,34 @@
         "Cocher pour que la commande s\\'éxecute en parrallele des autres actions": "Cocher pour que la commande s\\'éxecute en parrallele des autres actions",
         "Sélectionner un mot-clé": "キーワードを選択",
         "Nom du scene": "Nom du scene",
-        "Supprimer": "取り除きます"
+        "Supprimer": "取り除きます",
+        "Pseudo": "Pseudo",
+        "Pièce": "Pièce",
+        "Synchronisation réussie. Pour voir le status des equipements à jour, merci de rafraichir la page (F5)": "Synchronisation réussie. Pour voir le status des equipements à jour, merci de rafraichir la page (F5)",
+        "Information type générique": "Information type générique"
     },
-    "plugins\/gsh\/core\/class\/gsh_thermostat.class.php": {
-        "Chauffage": "加熱",
-        "Climatisation": "Climatisation"
+    "plugins\/gsh\/desktop\/modal\/advanceConfig.php": {
+        "Sauvegarder": "Sauvegarder",
+        "Configuration du volet": "Configuration du volet",
+        "Inverser": "Inverser",
+        "Sauvegarde réussi, pensez à relancer une synchronisation": "Sauvegarde réussi, pensez à relancer une synchronisation",
+        "Aucun type configuré pour ce périphérique": "Aucun type configuré pour ce périphérique",
+        "Il n'y a aucune configuration avancée pour ce type": "Il n'y a aucune configuration avancée pour ce type",
+        "Groupe objet (option nécéssitant un compte market spécifique)": "Groupe objet (option nécéssitant un compte market spécifique)"
+    },
+    "plugins\/gsh\/desktop\/modal\/showNeedGenericType.php": {
+        "Eqlogic ID non valide : ": "Eqlogic ID non valide : ",
+        "Voici les générique type qui sont utilisation avec votre type d'équipement. Attention il ne faut pas forcement tous les avoir sur l'équipement (ou n'en avoir aucun)": "Voici les générique type qui sont utilisation avec votre type d'équipement. Attention il ne faut pas forcement tous les avoir sur l'équipement (ou n'en avoir aucun)",
+        "Aucune information disponible": "Aucune information disponible"
+    },
+    "plugins\/gsh\/core\/class\/gsh_light.class.php": {
+        "Position": "Position",
+        "On": "On",
+        "Off": "Off",
+        "Etat": "Etat",
+        "Luminosité": "Luminosité",
+        "Etat luminosité": "Etat luminosité",
+        "Couleur": "Couleur",
+        "Etat couleur": "Etat couleur"
     }
 }
