[ROBOT] Action all

--- a/core/i18n/es_ES.json
+++ b/core/i18n/es_ES.json
@@ -28,7 +28,7 @@
         "Votre abonnement aux services assistant vocaux est illimité": "Votre abonnement aux services assistant vocaux est illimité",
         "Abonnement service assistant vocaux": "Abonnement service assistant vocaux",
         "Pour le prolonger ou vous réabonner, allez": "Pour le prolonger ou vous réabonner, allez",
-        "ici": "ici",
+        "ici": "aquí",
         "Votre abonnement aux services assistant vocaux est illimité.": "Votre abonnement aux services assistant vocaux est illimité.",
         "puis onglet Mes Service": "puis onglet Mes Service",
         "Votre abonnement aux services assistant vocaux est fini.": "Votre abonnement aux services assistant vocaux est fini.",
@@ -43,39 +43,39 @@
         "Equipement": "Dispositivos",
         "Scénario": "Escenario",
         "Plugin": "Plugin",
-        "Options": "Options",
-        "Status": "Status",
+        "Options": "Opciones",
+        "Status": "Estado",
         "Type": "Tipo",
         "Pseudo": "Apodo",
         "Action": "Acción",
         "Transmettre": "Transmitir",
-        "Aucune": "Aucune",
-        "Code": "Code",
+        "Aucune": "Ninguno",
+        "Code": "Código",
         "Remonter l'état": "Remonter l'état",
         "Code pin": "Code pin",
         "Aucun": "Ninguno",
         "Lumière": "Iluminación",
         "Thermostat": "Termostato",
-        "Prise": "Prise",
+        "Prise": "Enchufe",
         "Caméra": "Cámara",
-        "Store": "Store",
+        "Store": "Persiana",
         "Volet": "Persiana",
-        "Capteur": "Capteur",
-        "Fenêtre": "Fenêtre",
-        "Porte": "Porte",
-        "Alarme": "Alarme",
-        "Verrou": "Verrou",
-        "TV": "TV",
+        "Capteur": "Sensor",
+        "Fenêtre": "Ventana",
+        "Porte": "Puerta",
+        "Alarme": "Alarma",
+        "Verrou": "Cerradura",
+        "TV": "Televisión",
         "Enceinte": "Enceinte",
         "Ajouter scène": "Añadir escena",
         "Porte Garage": "Porte Garage",
         "Rideaux": "Rideaux",
         "Vanne": "Vanne",
-        "Ventilateur": "Ventilateur"
+        "Ventilateur": "Ventilador"
     },
     "plugins\/gsh\/desktop\/js\/gsh.js": {
         "Configuration de l'équipement": "Configuración del dispositivo",
-        "Configuration avancée": "Configuration avancée",
+        "Configuration avancée": "Configuración avanzada",
         "Synchronisation réussie": "Sincronizado con éxito",
         "Configuration péripheriques": "Configuración de periféricos",
         "Nom de la scene ?": "¿Nombre de la escena?",
@@ -87,15 +87,15 @@
         "Sélectionner un mot-clé": "Seleccionar una palabra clave",
         "Nom du scene": "Nombre de la escena",
         "Supprimer": "Borrar",
-        "Pseudo": "Pseudo",
-        "Pièce": "Pièce",
+        "Pseudo": "Apodo",
+        "Pièce": "Habitación",
         "Synchronisation réussie. Pour voir le status des equipements à jour, merci de rafraichir la page (F5)": "Synchronisation réussie. Pour voir le status des equipements à jour, merci de rafraichir la page (F5)",
         "Information type générique": "Information type générique"
     },
     "plugins\/gsh\/desktop\/modal\/advanceConfig.php": {
-        "Sauvegarder": "Sauvegarder",
+        "Sauvegarder": "Guardar",
         "Configuration du volet": "Configuration du volet",
-        "Inverser": "Inverser",
+        "Inverser": "Invertir",
         "Sauvegarde réussi, pensez à relancer une synchronisation": "Sauvegarde réussi, pensez à relancer une synchronisation",
         "Aucun type configuré pour ce périphérique": "Aucun type configuré pour ce périphérique",
         "Il n'y a aucune configuration avancée pour ce type": "Il n'y a aucune configuration avancée pour ce type",
@@ -107,13 +107,13 @@
         "Aucune information disponible": "Aucune information disponible"
     },
     "plugins\/gsh\/core\/class\/gsh_light.class.php": {
-        "Position": "Position",
+        "Position": "Posición",
         "On": "On",
         "Off": "Off",
-        "Etat": "Etat",
-        "Luminosité": "Luminosité",
+        "Etat": "Estado",
+        "Luminosité": "Luminosidad",
         "Etat luminosité": "Etat luminosité",
-        "Couleur": "Couleur",
+        "Couleur": "Color",
         "Etat couleur": "Etat couleur"
     }
 }
