--- a/core/i18n/id_ID.json
+++ b/core/i18n/id_ID.json
@@ -28,7 +28,7 @@
         "Votre abonnement aux services assistant vocaux est illimité": "Votre abonnement aux services assistant vocaux est illimité",
         "Abonnement service assistant vocaux": "Abonnement service assistant vocaux",
         "Pour le prolonger ou vous réabonner, allez": "Pour le prolonger ou vous réabonner, allez",
-        "ici": "ici",
+        "ici": "disini",
         "Votre abonnement aux services assistant vocaux est illimité.": "Votre abonnement aux services assistant vocaux est illimité.",
         "puis onglet Mes Service": "puis onglet Mes Service",
         "Votre abonnement aux services assistant vocaux est fini.": "Votre abonnement aux services assistant vocaux est fini.",
@@ -43,28 +43,28 @@
         "Equipement": "Peralatan",
         "Scénario": "skenario",
         "Plugin": "Plugin",
-        "Options": "Options",
+        "Options": "Pilihan",
         "Status": "Status",
         "Type": "Jenis",
         "Pseudo": "Pseudo",
         "Action": "Tindakan",
         "Transmettre": "Transmettre",
-        "Aucune": "Aucune",
-        "Code": "Code",
+        "Aucune": "tidak",
+        "Code": "Kode",
         "Remonter l'état": "Remonter l'état",
         "Code pin": "Code pin",
         "Aucun": "tidak",
         "Lumière": "Cahaya",
         "Thermostat": "Thermostat",
-        "Prise": "Prise",
+        "Prise": "Jack",
         "Caméra": "kamera",
-        "Store": "Store",
+        "Store": "Tuna Netra",
         "Volet": "penutup",
-        "Capteur": "Capteur",
+        "Capteur": "Sensor",
         "Fenêtre": "Fenêtre",
         "Porte": "Porte",
-        "Alarme": "Alarme",
-        "Verrou": "Verrou",
+        "Alarme": "alarm",
+        "Verrou": "Mengunci",
         "TV": "TV",
         "Enceinte": "Enceinte",
         "Ajouter scène": "Ajouter scène",
@@ -75,7 +75,7 @@
     },
     "plugins\/gsh\/desktop\/js\/gsh.js": {
         "Configuration de l'équipement": "Konfigurasi peralatan",
-        "Configuration avancée": "Configuration avancée",
+        "Configuration avancée": "konfigurasi lanjutan",
         "Synchronisation réussie": "Sinkronisasi berhasil",
         "Configuration péripheriques": "Configuration péripheriques",
         "Nom de la scene ?": "Nom de la scene ?",
@@ -93,9 +93,9 @@
         "Information type générique": "Information type générique"
     },
     "plugins\/gsh\/desktop\/modal\/advanceConfig.php": {
-        "Sauvegarder": "Sauvegarder",
+        "Sauvegarder": "menyimpan",
         "Configuration du volet": "Configuration du volet",
-        "Inverser": "Inverser",
+        "Inverser": "Membalikkan",
         "Sauvegarde réussi, pensez à relancer une synchronisation": "Sauvegarde réussi, pensez à relancer une synchronisation",
         "Aucun type configuré pour ce périphérique": "Aucun type configuré pour ce périphérique",
         "Il n'y a aucune configuration avancée pour ce type": "Il n'y a aucune configuration avancée pour ce type",
@@ -108,12 +108,12 @@
     },
     "plugins\/gsh\/core\/class\/gsh_light.class.php": {
         "Position": "Position",
-        "On": "On",
+        "On": "satu",
         "Off": "Off",
-        "Etat": "Etat",
-        "Luminosité": "Luminosité",
+        "Etat": "negara",
+        "Luminosité": "Kecerahan",
         "Etat luminosité": "Etat luminosité",
-        "Couleur": "Couleur",
+        "Couleur": "Warna",
         "Etat couleur": "Etat couleur"
     }
 }
