--- a/core/i18n/ja_JP.json
+++ b/core/i18n/ja_JP.json
@@ -43,27 +43,27 @@
         "Equipement": "設備",
         "Scénario": "シナリオ",
         "Plugin": "プラグイン",
-        "Options": "Options",
-        "Status": "Status",
+        "Options": "オプション",
+        "Status": "ステータス",
         "Type": "タイプ",
         "Pseudo": "ニックネーム",
         "Action": "アクション",
         "Transmettre": "Transmettre",
-        "Aucune": "Aucune",
-        "Code": "Code",
+        "Aucune": "いいえ",
+        "Code": "コード",
         "Remonter l'état": "Remonter l'état",
         "Code pin": "Code pin",
         "Aucun": "いいえ",
         "Lumière": "ライト",
         "Thermostat": "サーモスタット",
-        "Prise": "Prise",
+        "Prise": "服用",
         "Caméra": "カメラ",
         "Store": "Store",
         "Volet": "フラップ",
-        "Capteur": "Capteur",
+        "Capteur": "センサー",
         "Fenêtre": "Fenêtre",
         "Porte": "Porte",
-        "Alarme": "Alarme",
+        "Alarme": "アラーム",
         "Verrou": "Verrou",
         "TV": "TV",
         "Enceinte": "Enceinte",
@@ -75,7 +75,7 @@
     },
     "plugins\/gsh\/desktop\/js\/gsh.js": {
         "Configuration de l'équipement": "機器構成",
-        "Configuration avancée": "Configuration avancée",
+        "Configuration avancée": "高度な設定",
         "Synchronisation réussie": "正常な同期",
         "Configuration péripheriques": "Configuration péripheriques",
         "Nom de la scene ?": "Nom de la scene ?",
@@ -87,15 +87,15 @@
         "Sélectionner un mot-clé": "キーワードを選択",
         "Nom du scene": "Nom du scene",
         "Supprimer": "取り除きます",
-        "Pseudo": "Pseudo",
+        "Pseudo": "ニックネーム",
         "Pièce": "Pièce",
         "Synchronisation réussie. Pour voir le status des equipements à jour, merci de rafraichir la page (F5)": "Synchronisation réussie. Pour voir le status des equipements à jour, merci de rafraichir la page (F5)",
         "Information type générique": "Information type générique"
     },
     "plugins\/gsh\/desktop\/modal\/advanceConfig.php": {
-        "Sauvegarder": "Sauvegarder",
+        "Sauvegarder": "セーブ",
         "Configuration du volet": "Configuration du volet",
-        "Inverser": "Inverser",
+        "Inverser": "逆",
         "Sauvegarde réussi, pensez à relancer une synchronisation": "Sauvegarde réussi, pensez à relancer une synchronisation",
         "Aucun type configuré pour ce périphérique": "Aucun type configuré pour ce périphérique",
         "Il n'y a aucune configuration avancée pour ce type": "Il n'y a aucune configuration avancée pour ce type",
@@ -108,12 +108,12 @@
     },
     "plugins\/gsh\/core\/class\/gsh_light.class.php": {
         "Position": "Position",
-        "On": "On",
-        "Off": "Off",
-        "Etat": "Etat",
+        "On": "一つ",
+        "Off": "オフ",
+        "Etat": "状態",
         "Luminosité": "Luminosité",
         "Etat luminosité": "Etat luminosité",
-        "Couleur": "Couleur",
+        "Couleur": "カラー",
         "Etat couleur": "Etat couleur"
     }
 }
