--- a/core/i18n/pt_PT.json
+++ b/core/i18n/pt_PT.json
@@ -43,27 +43,27 @@
         "Equipement": "equipamento",
         "Scénario": "cenário",
         "Plugin": "Plugin",
-        "Options": "Options",
-        "Status": "Status",
+        "Options": "opções",
+        "Status": "estado",
         "Type": "tipo",
         "Pseudo": "apelido",
         "Action": "ação",
         "Transmettre": "Transmettre",
-        "Aucune": "Aucune",
-        "Code": "Code",
+        "Aucune": "não",
+        "Code": "código",
         "Remonter l'état": "Remonter l'état",
         "Code pin": "Code pin",
         "Aucun": "não",
         "Lumière": "luz",
         "Thermostat": "termóstato",
-        "Prise": "Prise",
+        "Prise": "tomando",
         "Caméra": "câmera",
         "Store": "Store",
         "Volet": "aba",
-        "Capteur": "Capteur",
+        "Capteur": "sensor",
         "Fenêtre": "Fenêtre",
         "Porte": "Porte",
-        "Alarme": "Alarme",
+        "Alarme": "alarme",
         "Verrou": "Verrou",
         "TV": "TV",
         "Enceinte": "Enceinte",
@@ -75,7 +75,7 @@
     },
     "plugins\/gsh\/desktop\/js\/gsh.js": {
         "Configuration de l'équipement": "Configuração de equipamento",
-        "Configuration avancée": "Configuration avancée",
+        "Configuration avancée": "configuração avançada",
         "Synchronisation réussie": "sincronização bem-sucedida",
         "Configuration péripheriques": "Configuration péripheriques",
         "Nom de la scene ?": "Nom de la scene ?",
@@ -87,15 +87,15 @@
         "Sélectionner un mot-clé": "Selecione uma palavra-chave",
         "Nom du scene": "Nom du scene",
         "Supprimer": "remover",
-        "Pseudo": "Pseudo",
+        "Pseudo": "apelido",
         "Pièce": "Pièce",
         "Synchronisation réussie. Pour voir le status des equipements à jour, merci de rafraichir la page (F5)": "Synchronisation réussie. Pour voir le status des equipements à jour, merci de rafraichir la page (F5)",
         "Information type générique": "Information type générique"
     },
     "plugins\/gsh\/desktop\/modal\/advanceConfig.php": {
-        "Sauvegarder": "Sauvegarder",
+        "Sauvegarder": "salvar",
         "Configuration du volet": "Configuration du volet",
-        "Inverser": "Inverser",
+        "Inverser": "inverter",
         "Sauvegarde réussi, pensez à relancer une synchronisation": "Sauvegarde réussi, pensez à relancer une synchronisation",
         "Aucun type configuré pour ce périphérique": "Aucun type configuré pour ce périphérique",
         "Il n'y a aucune configuration avancée pour ce type": "Il n'y a aucune configuration avancée pour ce type",
@@ -108,12 +108,12 @@
     },
     "plugins\/gsh\/core\/class\/gsh_light.class.php": {
         "Position": "Position",
-        "On": "On",
-        "Off": "Off",
-        "Etat": "Etat",
+        "On": "um",
+        "Off": "fora",
+        "Etat": "estado",
         "Luminosité": "Luminosité",
         "Etat luminosité": "Etat luminosité",
-        "Couleur": "Couleur",
+        "Couleur": "cor",
         "Etat couleur": "Etat couleur"
     }
 }
