--- a/core/i18n/tr.json
+++ b/core/i18n/tr.json
@@ -43,39 +43,39 @@
         "Equipement": "Cihaz",
         "Scénario": "Senaryo",
         "Plugin": "Eklenti",
-        "Options": "Options",
-        "Status": "Status",
+        "Options": "Opsiyonlar",
+        "Status": "Durum",
         "Type": "Çeşit",
         "Pseudo": "Rumuz",
         "Action": "Eylem",
         "Transmettre": "Ilet",
-        "Aucune": "Aucune",
-        "Code": "Code",
+        "Aucune": "Hiçbir",
+        "Code": "Kod",
         "Remonter l'état": "Remonter l'état",
         "Code pin": "Code pin",
         "Aucun": "Hiçbir",
         "Lumière": "Işık",
         "Thermostat": "Termostat",
-        "Prise": "Prise",
+        "Prise": "Priz",
         "Caméra": "Kamera",
-        "Store": "Store",
+        "Store": "Mağaza",
         "Volet": "Kepenek",
-        "Capteur": "Capteur",
+        "Capteur": "Sensör",
         "Fenêtre": "Fenêtre",
-        "Porte": "Porte",
-        "Alarme": "Alarme",
-        "Verrou": "Verrou",
-        "TV": "TV",
+        "Porte": "Kapı",
+        "Alarme": "Alarm",
+        "Verrou": "Kilit",
+        "TV": "Televizyon",
         "Enceinte": "Enceinte",
         "Ajouter scène": "Ajouter scène",
         "Porte Garage": "Porte Garage",
         "Rideaux": "Rideaux",
         "Vanne": "Vanne",
-        "Ventilateur": "Ventilateur"
+        "Ventilateur": "Vantilatör"
     },
     "plugins\/gsh\/desktop\/js\/gsh.js": {
         "Configuration de l'équipement": "Cihazın ayarları",
-        "Configuration avancée": "Configuration avancée",
+        "Configuration avancée": "Gelişmiş ayarlar",
         "Synchronisation réussie": "Sekronizasyon başarılı",
         "Configuration péripheriques": "Configuration péripheriques",
         "Nom de la scene ?": "Nom de la scene ?",
@@ -87,15 +87,15 @@
         "Sélectionner un mot-clé": "Anahtar kelime seçin",
         "Nom du scene": "Nom du scene",
         "Supprimer": "Sil",
-        "Pseudo": "Pseudo",
-        "Pièce": "Pièce",
+        "Pseudo": "Rumuz",
+        "Pièce": "Oda",
         "Synchronisation réussie. Pour voir le status des equipements à jour, merci de rafraichir la page (F5)": "Synchronisation réussie. Pour voir le status des equipements à jour, merci de rafraichir la page (F5)",
         "Information type générique": "Information type générique"
     },
     "plugins\/gsh\/desktop\/modal\/advanceConfig.php": {
-        "Sauvegarder": "Sauvegarder",
+        "Sauvegarder": "Kaydet",
         "Configuration du volet": "Configuration du volet",
-        "Inverser": "Inverser",
+        "Inverser": "Ters çevir",
         "Sauvegarde réussi, pensez à relancer une synchronisation": "Sauvegarde réussi, pensez à relancer une synchronisation",
         "Aucun type configuré pour ce périphérique": "Aucun type configuré pour ce périphérique",
         "Il n'y a aucune configuration avancée pour ce type": "Il n'y a aucune configuration avancée pour ce type",
@@ -107,13 +107,13 @@
         "Aucune information disponible": "Aucune information disponible"
     },
     "plugins\/gsh\/core\/class\/gsh_light.class.php": {
-        "Position": "Position",
+        "Position": "Pozisyon",
         "On": "On",
         "Off": "Off",
-        "Etat": "Etat",
-        "Luminosité": "Luminosité",
+        "Etat": "Durum",
+        "Luminosité": "Işık",
         "Etat luminosité": "Etat luminosité",
-        "Couleur": "Couleur",
+        "Couleur": "Renk",
         "Etat couleur": "Etat couleur"
     }
 }
