--- a/core/i18n/de_DE.json
+++ b/core/i18n/de_DE.json
@@ -28,7 +28,7 @@
         "Votre abonnement aux services assistant vocaux est illimité": "Votre abonnement aux services assistant vocaux est illimité",
         "Abonnement service assistant vocaux": "Abonnement service assistant vocaux",
         "Pour le prolonger ou vous réabonner, allez": "Pour le prolonger ou vous réabonner, allez",
-        "ici": "ici",
+        "ici": "hier",
         "Votre abonnement aux services assistant vocaux est illimité.": "Votre abonnement aux services assistant vocaux est illimité.",
         "puis onglet Mes Service": "puis onglet Mes Service",
         "Votre abonnement aux services assistant vocaux est fini.": "Votre abonnement aux services assistant vocaux est fini.",
@@ -43,39 +43,39 @@
         "Equipement": "Gerät",
         "Scénario": "Szenario",
         "Plugin": "Plugin",
-        "Options": "Options",
+        "Options": "Optionen",
         "Status": "Status",
         "Type": "Typ",
         "Pseudo": "Nickname",
         "Action": "Aktion",
         "Transmettre": "Übertragen",
-        "Aucune": "Aucune",
+        "Aucune": "Ohne",
         "Code": "Code",
         "Remonter l'état": "Remonter l'état",
         "Code pin": "Code pin",
         "Aucun": "Ohne",
         "Lumière": "Licht",
         "Thermostat": "Thermostat",
-        "Prise": "Prise",
+        "Prise": "Ausgang",
         "Caméra": "Kamera",
-        "Store": "Store",
+        "Store": "blind",
         "Volet": "Jalousie",
-        "Capteur": "Capteur",
-        "Fenêtre": "Fenêtre",
-        "Porte": "Porte",
-        "Alarme": "Alarme",
-        "Verrou": "Verrou",
+        "Capteur": "Sensor",
+        "Fenêtre": "Fenster",
+        "Porte": "Tor",
+        "Alarme": "Alarm",
+        "Verrou": "Schloss",
         "TV": "TV",
         "Enceinte": "Enceinte",
         "Ajouter scène": "Ajouter scène",
         "Porte Garage": "Porte Garage",
         "Rideaux": "Rideaux",
         "Vanne": "Vanne",
-        "Ventilateur": "Ventilateur"
+        "Ventilateur": "Lüfter"
     },
     "plugins\/gsh\/desktop\/js\/gsh.js": {
         "Configuration de l'équipement": "Geräte Konfiguration",
-        "Configuration avancée": "Configuration avancée",
+        "Configuration avancée": "Erweiterte Konfiguration",
         "Synchronisation réussie": "erfolgreiche Synchronisation",
         "Configuration péripheriques": "Device Konfiguration",
         "Nom de la scene ?": "Nom de la scene ?",
@@ -87,15 +87,15 @@
         "Sélectionner un mot-clé": "Schlüsselwort auswählen",
         "Nom du scene": "Nom du scene",
         "Supprimer": "Löschen",
-        "Pseudo": "Pseudo",
-        "Pièce": "Pièce",
+        "Pseudo": "Nickname",
+        "Pièce": "Zimmer",
         "Synchronisation réussie. Pour voir le status des equipements à jour, merci de rafraichir la page (F5)": "Synchronisation réussie. Pour voir le status des equipements à jour, merci de rafraichir la page (F5)",
         "Information type générique": "Information type générique"
     },
     "plugins\/gsh\/desktop\/modal\/advanceConfig.php": {
-        "Sauvegarder": "Sauvegarder",
+        "Sauvegarder": "Speichern",
         "Configuration du volet": "Configuration du volet",
-        "Inverser": "Inverser",
+        "Inverser": "umgekehrt",
         "Sauvegarde réussi, pensez à relancer une synchronisation": "Sauvegarde réussi, pensez à relancer une synchronisation",
         "Aucun type configuré pour ce périphérique": "Aucun type configuré pour ce périphérique",
         "Il n'y a aucune configuration avancée pour ce type": "Il n'y a aucune configuration avancée pour ce type",
@@ -108,12 +108,12 @@
     },
     "plugins\/gsh\/core\/class\/gsh_light.class.php": {
         "Position": "Position",
-        "On": "On",
-        "Off": "Off",
-        "Etat": "Etat",
-        "Luminosité": "Luminosité",
+        "On": "An",
+        "Off": "Aus",
+        "Etat": "Zustand",
+        "Luminosité": "Helligkeit",
         "Etat luminosité": "Etat luminosité",
-        "Couleur": "Couleur",
+        "Couleur": "Farbe",
         "Etat couleur": "Etat couleur"
     }
 }
