--- a/core/i18n/en_US.json
+++ b/core/i18n/en_US.json
@@ -28,7 +28,7 @@
         "Votre abonnement aux services assistant vocaux est illimité": "Votre abonnement aux services assistant vocaux est illimité",
         "Abonnement service assistant vocaux": "Abonnement service assistant vocaux",
         "Pour le prolonger ou vous réabonner, allez": "Pour le prolonger ou vous réabonner, allez",
-        "ici": "ici",
+        "ici": "here",
         "Votre abonnement aux services assistant vocaux est illimité.": "Votre abonnement aux services assistant vocaux est illimité.",
         "puis onglet Mes Service": "puis onglet Mes Service",
         "Votre abonnement aux services assistant vocaux est fini.": "Votre abonnement aux services assistant vocaux est fini.",
@@ -49,33 +49,33 @@
         "Pseudo": "Alias",
         "Action": "Action",
         "Transmettre": "Transmit",
-        "Aucune": "Aucune",
+        "Aucune": "None",
         "Code": "Code",
         "Remonter l'état": "Remonter l'état",
         "Code pin": "Code pin",
         "Aucun": "None",
         "Lumière": "Light",
         "Thermostat": "Thermostat",
-        "Prise": "Prise",
+        "Prise": "Plug",
         "Caméra": "Camera",
-        "Store": "Store",
+        "Store": "Shutter",
         "Volet": "Shutter",
-        "Capteur": "Capteur",
-        "Fenêtre": "Fenêtre",
-        "Porte": "Porte",
-        "Alarme": "Alarme",
-        "Verrou": "Verrou",
+        "Capteur": "Sensor",
+        "Fenêtre": "Window",
+        "Porte": "Door",
+        "Alarme": "Alarm",
+        "Verrou": "Lock",
         "TV": "TV",
         "Enceinte": "Enceinte",
         "Ajouter scène": "Add scene",
         "Porte Garage": "Porte Garage",
         "Rideaux": "Rideaux",
         "Vanne": "Vanne",
-        "Ventilateur": "Ventilateur"
+        "Ventilateur": "Fan"
     },
     "plugins\/gsh\/desktop\/js\/gsh.js": {
         "Configuration de l'équipement": "Device configuration",
-        "Configuration avancée": "Configuration avancée",
+        "Configuration avancée": "Advanced configuration",
         "Synchronisation réussie": "Synchronisation successful",
         "Configuration péripheriques": "Devices configuration",
         "Nom de la scene ?": "Scene name?",
@@ -87,15 +87,15 @@
         "Sélectionner un mot-clé": "Select a keyword",
         "Nom du scene": "Scene name",
         "Supprimer": "Delete",
-        "Pseudo": "Pseudo",
-        "Pièce": "Pièce",
+        "Pseudo": "Alias",
+        "Pièce": "Piece",
         "Synchronisation réussie. Pour voir le status des equipements à jour, merci de rafraichir la page (F5)": "Synchronisation réussie. Pour voir le status des equipements à jour, merci de rafraichir la page (F5)",
         "Information type générique": "Information type générique"
     },
     "plugins\/gsh\/desktop\/modal\/advanceConfig.php": {
-        "Sauvegarder": "Sauvegarder",
+        "Sauvegarder": "Save",
         "Configuration du volet": "Configuration du volet",
-        "Inverser": "Inverser",
+        "Inverser": "Invert",
         "Sauvegarde réussi, pensez à relancer une synchronisation": "Sauvegarde réussi, pensez à relancer une synchronisation",
         "Aucun type configuré pour ce périphérique": "Aucun type configuré pour ce périphérique",
         "Il n'y a aucune configuration avancée pour ce type": "Il n'y a aucune configuration avancée pour ce type",
@@ -110,10 +110,10 @@
         "Position": "Position",
         "On": "On",
         "Off": "Off",
-        "Etat": "Etat",
-        "Luminosité": "Luminosité",
+        "Etat": "State",
+        "Luminosité": "Light",
         "Etat luminosité": "Etat luminosité",
-        "Couleur": "Couleur",
+        "Couleur": "Color",
         "Etat couleur": "Etat couleur"
     }
 }
