--- a/core/i18n/it_IT.json
+++ b/core/i18n/it_IT.json
@@ -28,7 +28,7 @@
         "Votre abonnement aux services assistant vocaux est illimité": "Votre abonnement aux services assistant vocaux est illimité",
         "Abonnement service assistant vocaux": "Abonnement service assistant vocaux",
         "Pour le prolonger ou vous réabonner, allez": "Pour le prolonger ou vous réabonner, allez",
-        "ici": "ici",
+        "ici": "qui",
         "Votre abonnement aux services assistant vocaux est illimité.": "Votre abonnement aux services assistant vocaux est illimité.",
         "puis onglet Mes Service": "puis onglet Mes Service",
         "Votre abonnement aux services assistant vocaux est fini.": "Votre abonnement aux services assistant vocaux est fini.",
@@ -43,27 +43,27 @@
         "Equipement": "Dispositivo",
         "Scénario": "Scena",
         "Plugin": "Plugin",
-        "Options": "Options",
-        "Status": "Status",
+        "Options": "Opzioni",
+        "Status": "Stato",
         "Type": "Tipo",
         "Pseudo": "Pseudonimo",
         "Action": "Azione",
         "Transmettre": "Transmettre",
-        "Aucune": "Aucune",
-        "Code": "Code",
+        "Aucune": "no",
+        "Code": "Codice",
         "Remonter l'état": "Remonter l'état",
         "Code pin": "Code pin",
         "Aucun": "no",
         "Lumière": "Luce",
         "Thermostat": "Termostato",
-        "Prise": "Prise",
+        "Prise": "presa",
         "Caméra": "Telecamera",
         "Store": "Store",
         "Volet": "falda",
-        "Capteur": "Capteur",
-        "Fenêtre": "Fenêtre",
+        "Capteur": "Sensore",
+        "Fenêtre": "Finestra",
         "Porte": "Porte",
-        "Alarme": "Alarme",
+        "Alarme": "Allarme",
         "Verrou": "Verrou",
         "TV": "TV",
         "Enceinte": "Enceinte",
@@ -75,7 +75,7 @@
     },
     "plugins\/gsh\/desktop\/js\/gsh.js": {
         "Configuration de l'équipement": "Configurazione dispositivo",
-        "Configuration avancée": "Configuration avancée",
+        "Configuration avancée": "Configurazione avanzata",
         "Synchronisation réussie": "Sincronizzazione avvenuta con successo",
         "Configuration péripheriques": "Configuration péripheriques",
         "Nom de la scene ?": "Nom de la scene ?",
@@ -87,15 +87,15 @@
         "Sélectionner un mot-clé": "Seleziona una parola chiave",
         "Nom du scene": "Nom du scene",
         "Supprimer": "rimuovere",
-        "Pseudo": "Pseudo",
+        "Pseudo": "Pseudonimo",
         "Pièce": "Pièce",
         "Synchronisation réussie. Pour voir le status des equipements à jour, merci de rafraichir la page (F5)": "Synchronisation réussie. Pour voir le status des equipements à jour, merci de rafraichir la page (F5)",
         "Information type générique": "Information type générique"
     },
     "plugins\/gsh\/desktop\/modal\/advanceConfig.php": {
-        "Sauvegarder": "Sauvegarder",
+        "Sauvegarder": "salvare",
         "Configuration du volet": "Configuration du volet",
-        "Inverser": "Inverser",
+        "Inverser": "Inverti",
         "Sauvegarde réussi, pensez à relancer une synchronisation": "Sauvegarde réussi, pensez à relancer une synchronisation",
         "Aucun type configuré pour ce périphérique": "Aucun type configuré pour ce périphérique",
         "Il n'y a aucune configuration avancée pour ce type": "Il n'y a aucune configuration avancée pour ce type",
@@ -110,10 +110,10 @@
         "Position": "Position",
         "On": "On",
         "Off": "Off",
-        "Etat": "Etat",
+        "Etat": "Stato",
         "Luminosité": "Luminosité",
         "Etat luminosité": "Etat luminosité",
-        "Couleur": "Couleur",
+        "Couleur": "Colore",
         "Etat couleur": "Etat couleur"
     }
 }
