--- a/core/i18n/ru_RU.json
+++ b/core/i18n/ru_RU.json
@@ -28,7 +28,7 @@
         "Votre abonnement aux services assistant vocaux est illimité": "Votre abonnement aux services assistant vocaux est illimité",
         "Abonnement service assistant vocaux": "Abonnement service assistant vocaux",
         "Pour le prolonger ou vous réabonner, allez": "Pour le prolonger ou vous réabonner, allez",
-        "ici": "ici",
+        "ici": "здесь",
         "Votre abonnement aux services assistant vocaux est illimité.": "Votre abonnement aux services assistant vocaux est illimité.",
         "puis onglet Mes Service": "puis onglet Mes Service",
         "Votre abonnement aux services assistant vocaux est fini.": "Votre abonnement aux services assistant vocaux est fini.",
@@ -43,28 +43,28 @@
         "Equipement": "Оборудование",
         "Scénario": "Сценарий",
         "Plugin": "Плагин",
-        "Options": "Options",
-        "Status": "Status",
+        "Options": "Опции",
+        "Status": "Статус",
         "Type": "Тип",
         "Pseudo": "Ник",
         "Action": "Действие",
         "Transmettre": "Transmettre",
-        "Aucune": "Aucune",
-        "Code": "Code",
+        "Aucune": "нет",
+        "Code": "Код",
         "Remonter l'état": "Remonter l'état",
         "Code pin": "Code pin",
         "Aucun": "нет",
         "Lumière": "Освещение",
         "Thermostat": "Термостат",
-        "Prise": "Prise",
+        "Prise": "принятие",
         "Caméra": "Камера",
-        "Store": "Store",
+        "Store": "Штора",
         "Volet": "створка",
-        "Capteur": "Capteur",
+        "Capteur": "Датчик",
         "Fenêtre": "Fenêtre",
         "Porte": "Porte",
-        "Alarme": "Alarme",
-        "Verrou": "Verrou",
+        "Alarme": "сигнал тревоги",
+        "Verrou": "Блокировка",
         "TV": "TV",
         "Enceinte": "Enceinte",
         "Ajouter scène": "Ajouter scène",
@@ -75,7 +75,7 @@
     },
     "plugins\/gsh\/desktop\/js\/gsh.js": {
         "Configuration de l'équipement": "Конфигурация оборудования",
-        "Configuration avancée": "Configuration avancée",
+        "Configuration avancée": "Расширенные настройки",
         "Synchronisation réussie": "Успешная синхронизация",
         "Configuration péripheriques": "Configuration péripheriques",
         "Nom de la scene ?": "Nom de la scene ?",
@@ -87,15 +87,15 @@
         "Sélectionner un mot-clé": "Выберите ключевое слово",
         "Nom du scene": "Nom du scene",
         "Supprimer": "удаление",
-        "Pseudo": "Pseudo",
+        "Pseudo": "Ник",
         "Pièce": "Pièce",
         "Synchronisation réussie. Pour voir le status des equipements à jour, merci de rafraichir la page (F5)": "Synchronisation réussie. Pour voir le status des equipements à jour, merci de rafraichir la page (F5)",
         "Information type générique": "Information type générique"
     },
     "plugins\/gsh\/desktop\/modal\/advanceConfig.php": {
-        "Sauvegarder": "Sauvegarder",
+        "Sauvegarder": "экономить",
         "Configuration du volet": "Configuration du volet",
-        "Inverser": "Inverser",
+        "Inverser": "Обратный",
         "Sauvegarde réussi, pensez à relancer une synchronisation": "Sauvegarde réussi, pensez à relancer une synchronisation",
         "Aucun type configuré pour ce périphérique": "Aucun type configuré pour ce périphérique",
         "Il n'y a aucune configuration avancée pour ce type": "Il n'y a aucune configuration avancée pour ce type",
@@ -107,13 +107,13 @@
         "Aucune information disponible": "Aucune information disponible"
     },
     "plugins\/gsh\/core\/class\/gsh_light.class.php": {
-        "Position": "Position",
-        "On": "On",
-        "Off": "Off",
-        "Etat": "Etat",
-        "Luminosité": "Luminosité",
+        "Position": "Позиция",
+        "On": "Включить",
+        "Off": "Выключить",
+        "Etat": "Состояние",
+        "Luminosité": "Яркость",
         "Etat luminosité": "Etat luminosité",
-        "Couleur": "Couleur",
+        "Couleur": "Цвет",
         "Etat couleur": "Etat couleur"
     }
 }
