--- a/core/i18n/es_ES.json
+++ b/core/i18n/es_ES.json
@@ -20,22 +20,22 @@
         "Homegraph User Agent": "Homegraph User Agent",
         "Clef d'accès sécurisé": "Clave de acceso seguro",
         "Mail client (JWT)": "Mail client (JWT)",
-        "Clef privé (JWT)": "Clef privé (JWT)",
+        "Clef privé (JWT)": "llave privada (JWT)",
         "Interaction": "Interacción",
         "ID du projet Dialogflow": "ID del proyecto Dialogflow",
         "Clef authentification header (authkey)": "Clave authentification header (authkey)",
         "Configuration envoyée avec succès": "Configuración enviada correctamente",
-        "Votre abonnement aux services assistant vocaux est illimité": "Votre abonnement aux services assistant vocaux est illimité",
-        "Abonnement service assistant vocaux": "Abonnement service assistant vocaux",
-        "Pour le prolonger ou vous réabonner, allez": "Pour le prolonger ou vous réabonner, allez",
+        "Votre abonnement aux services assistant vocaux est illimité": "Su suscripción a los servicios de asistente de voz es ilimitada",
+        "Abonnement service assistant vocaux": "Suscripción al servicio de asistente de voz",
+        "Pour le prolonger ou vous réabonner, allez": "Para ampliar o volver a suscribirse, vaya a",
         "ici": "aquí",
-        "Votre abonnement aux services assistant vocaux est illimité.": "Votre abonnement aux services assistant vocaux est illimité.",
-        "puis onglet Mes Service": "puis onglet Mes Service",
-        "Votre abonnement aux services assistant vocaux est fini.": "Votre abonnement aux services assistant vocaux est fini.",
-        "Pour vous réabonner, allez": "Pour vous réabonner, allez",
-        "Votre abonnement aux services assistant vocaux fini le ": "Votre abonnement aux services assistant vocaux fini le ",
-        "Pour le prolonger, allez": "Pour le prolonger, allez",
-        "Autoriser la communication local": "Autoriser la communication local"
+        "Votre abonnement aux services assistant vocaux est illimité.": "Su suscripción a los servicios de asistente de voz es ilimitada.",
+        "puis onglet Mes Service": "luego la pestaña Mis servicios",
+        "Votre abonnement aux services assistant vocaux est fini.": "Se cancela su suscripción a los servicios de asistente de voz.",
+        "Pour vous réabonner, allez": "Para suscribirse de nuevo, vaya a",
+        "Votre abonnement aux services assistant vocaux fini le ": "Su suscripción a los servicios de asistente de voz finaliza el ",
+        "Pour le prolonger, allez": "Para ampliarlo, vaya a",
+        "Autoriser la communication local": "Permitir la comunicación local"
     },
     "plugins\/gsh\/desktop\/php\/gsh.php": {
         "Voir la configuration": "Ver la configuración",
@@ -51,7 +51,7 @@
         "Transmettre": "Transmitir",
         "Aucune": "Ninguno",
         "Code": "Código",
-        "Remonter l'état": "Remonter l'état",
+        "Remonter l'état": "Restaurar el estado",
         "Code pin": "Code pin",
         "Aucun": "Ninguno",
         "Lumière": "Iluminación",
@@ -66,11 +66,11 @@
         "Alarme": "Alarma",
         "Verrou": "Cerradura",
         "TV": "Televisión",
-        "Enceinte": "Enceinte",
+        "Enceinte": "Recinto",
         "Ajouter scène": "Añadir escena",
-        "Porte Garage": "Porte Garage",
-        "Rideaux": "Rideaux",
-        "Vanne": "Vanne",
+        "Porte Garage": "Puerta Garaje",
+        "Rideaux": "Cortina",
+        "Vanne": "Válvula",
         "Ventilateur": "Ventilador"
     },
     "plugins\/gsh\/desktop\/js\/gsh.js": {
@@ -89,22 +89,22 @@
         "Supprimer": "Borrar",
         "Pseudo": "Apodo",
         "Pièce": "Habitación",
-        "Synchronisation réussie. Pour voir le status des equipements à jour, merci de rafraichir la page (F5)": "Synchronisation réussie. Pour voir le status des equipements à jour, merci de rafraichir la page (F5)",
-        "Information type générique": "Information type générique"
+        "Synchronisation réussie. Pour voir le status des equipements à jour, merci de rafraichir la page (F5)": "Sincronización exitosa. Para ver el estado del equipo actualizado, actualice la página (F5)",
+        "Information type générique": "Información tipo genérica "
     },
     "plugins\/gsh\/desktop\/modal\/advanceConfig.php": {
         "Sauvegarder": "Guardar",
-        "Configuration du volet": "Configuration du volet",
+        "Configuration du volet": "Configuración de persiana",
         "Inverser": "Invertir",
-        "Sauvegarde réussi, pensez à relancer une synchronisation": "Sauvegarde réussi, pensez à relancer une synchronisation",
-        "Aucun type configuré pour ce périphérique": "Aucun type configuré pour ce périphérique",
-        "Il n'y a aucune configuration avancée pour ce type": "Il n'y a aucune configuration avancée pour ce type",
-        "Groupe objet (option nécéssitant un compte market spécifique)": "Groupe objet (option nécéssitant un compte market spécifique)"
+        "Sauvegarde réussi, pensez à relancer une synchronisation": "Salvado exitoso, recuerde relanzar una sincronización",
+        "Aucun type configuré pour ce périphérique": "No hay ningún tipo configurado para este dispositivo",
+        "Il n'y a aucune configuration avancée pour ce type": "No hay configuración avanzada para este tipo",
+        "Groupe objet (option nécéssitant un compte market spécifique)": "Grupo de objetos (opción que requiere una cuenta de mercado específica)"
     },
     "plugins\/gsh\/desktop\/modal\/showNeedGenericType.php": {
-        "Eqlogic ID non valide : ": "Eqlogic ID non valide : ",
-        "Voici les générique type qui sont utilisation avec votre type d'équipement. Attention il ne faut pas forcement tous les avoir sur l'équipement (ou n'en avoir aucun)": "Voici les générique type qui sont utilisation avec votre type d'équipement. Attention il ne faut pas forcement tous les avoir sur l'équipement (ou n'en avoir aucun)",
-        "Aucune information disponible": "Aucune information disponible"
+        "Eqlogic ID non valide : ": "Eqlogic ID no válido : ",
+        "Voici les générique type qui sont utilisation avec votre type d'équipement. Attention il ne faut pas forcement tous les avoir sur l'équipement (ou n'en avoir aucun)": "Estos son los tipos genéricos que se utilizan con su tipo de dispositivo. Tenga cuidado de no tenerlos todos sobre el dispositivo (o ninguno en absoluto)",
+        "Aucune information disponible": "No hay información disponible"
     },
     "plugins\/gsh\/core\/class\/gsh_light.class.php": {
         "Position": "Posición",
@@ -112,8 +112,8 @@
         "Off": "Off",
         "Etat": "Estado",
         "Luminosité": "Luminosidad",
-        "Etat luminosité": "Etat luminosité",
+        "Etat luminosité": "Estado de luminosidad",
         "Couleur": "Color",
-        "Etat couleur": "Etat couleur"
+        "Etat couleur": "Estado color"
     }
 }
